--- a/concepts/product.mdx
+++ b/concepts/product.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Product"
 description: "A functionality or service evaluated by Galtea"
-icon: "cubes"
+icon: "box"
 iconType: "solid"
 ---
 
