--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quality Tests"
 description: "Tests that evaluate the quality and correctness of outputs"
+icon: "star"
 ---
 
 ## What are Quality Tests?
