--- a/concepts/product/test/red-teaming-tests.mdx
+++ b/concepts/product/test/red-teaming-tests.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Red Teaming Tests"
 description: "Tests that evaluate security, safety, and bias aspects of AI products"
+icon: "shield-halved"
 ---
 
 ## What are Red Teaming Tests?
