--- a/registration.mdx
+++ b/registration.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Registration"
 description: "How to request access to the Galtea platform"
+icon: "user-plus"
 ---
 
 ## Request Access to Galtea
