--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -10,7 +10,11 @@ With **Galtea**, you can improve AI reliability, reduce risks, streamline compli
 
 ### Logging in to the dashboard and creating a product
 
-The first step in tracking the quality and the reliability of your LLM based product is creating a product in the dashboard. For that you will need to login with your credential.
+The first step in tracking the quality and the reliability of your LLM based product is creating a product in the dashboard. For that you will need to login with your credentials.
+
+![title](/images/login.jpg)
+
+As you click on Products > Create New Product, you will be presented with the product onboarding form. The stored metadata is used mostly for repoorting purposes, and if needed the description is used for generating synthetic test data. 
 
 ### Register a version via the SDK
 
