--- a/concepts/product/evaluation.mdx
+++ b/concepts/product/evaluation.mdx
@@ -33,9 +33,9 @@ The core components of an evaluation are its [evaluation tasks](/concepts/produc
 
 Once you've created an evaluation, you can access detailed information and results on the [platform](https://platform.galtea.ai/).
 
-<Note>
+<Info>
   To view evaluation results, you need to visit a product's page *Analytics* section. For detailed information about a particular evaluation, you can navigate to the *Evaluations* tab and select a specific evaluation.
-</Note>
+</Info>
 
 The platform provides:
 - Overview of a product's evaluations results per metric
