--- a/snippets/cards/evaluation-card.mdx
+++ b/snippets/cards/evaluation-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Evaluation" icon="badge-check" iconType="solid" href="/concepts/product/evaluation">
-  A link between a product version and a test
+  A link between a product version and a test that groups evaluation tasks
 </Card>
