Added some clarifications on confusing concepts

--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -26,7 +26,7 @@ When creating a metric type in Galtea, you'll need to provide the following info
   The name of the metric type. **Example**: "Factual Accuracy"
 </ResponseField>
 
-<Note>You need to provide **either** Criteria **or** Evaluation Steps, but not both. Your choice depends on your preferred evaluation approach.</Note>
+<Note>You need to provide **either** *Criteria* **or** *Evaluation Steps*, but not both. Your choice depends on your preferred evaluation approach.</Note>
 
 <ResponseField name="Criteria" type="Text Area" required="conditional">
   High-level standards that define what aspects of a response matter for evaluation. **Example**: "Evaluate if the response contains factually correct information that aligns with verified sources. Penalize statements that contradict established knowledge or introduce speculation without
