--- a/concepts/product/evaluation.mdx
+++ b/concepts/product/evaluation.mdx
@@ -21,7 +21,7 @@ An evaluation in Galtea is a link between a specific [version](/concepts/product
 
 The core components of an evaluation are its [evaluation tasks](/concepts/product/evaluation/task). Each task represents the assessment of a single test challenge using specific [metric types](/concepts/metric-type).
 
-<Card title="Evaluation Task" icon="clipboard-check" href="/concepts/product/evaluation/task">
+<Card title="Evaluation Task" icon="clipboard-check" iconType="solid" href="/concepts/product/evaluation/task">
   Learn more about evaluation tasks
 </Card>
 
