--- a/concepts/product/version.mdx
+++ b/concepts/product/version.mdx
@@ -18,7 +18,7 @@ One of the key benefits of tracking versions in Galtea is the ability to compare
 - Compare different model providers or approaches
 - Make data-driven decisions about which version to deploy
 
-<Card title="Run a Comparison Evaluation" icon="code-compare" href="/concepts/product/evaluation">
+<Card title="Run a Comparison Evaluation" icon="clipboard-check" iconType="solid" href="/concepts/product/evaluation">
   Learn how to compare different versions using the same test
 </Card>
 
