--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -28,7 +28,7 @@ When creating a metric type in Galtea, you'll need to provide the following info
 
 <Note>You need to provide **either** *Criteria* **or** *Evaluation Steps*, but not both. Your choice depends on your preferred evaluation approach.</Note>
 
-<ResponseField name="Criteria" type="Text Area" required="conditional">
+<ResponseField name="Criteria" type="Text" required="conditional">
   High-level standards that define what aspects of a response matter for evaluation. **Example**: "Evaluate if the response contains factually correct information that aligns with verified sources. Penalize statements that contradict established knowledge or introduce speculation without
   citation."
 </ResponseField>
